test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_7.k
import pkg

schema DataMixin:
    name: str

schema Data:
    mixin [
        pkg.PersonMixin,
        DataMixinError
    ]
